@@ -240,17 +240,17 @@ local options={
 		max    = 1,
 		step   = 1,
 	},
-	{
-		key    = 'airrebalance',
-		name   = 'Heavier but more expensive air',
-		desc   = 'placeholder-description',
-		type   = 'number',
-		section= 'options',
-		def    = 0,
-		min    = 0,
-		max    = 1,
-		step   = 1,
-	},
+	--{
+	--	key    = 'airrebalance',
+	--	name   = 'Heavier but more expensive air',
+	--	desc   = 'placeholder-description',
+	--	type   = 'number',
+	--	section= 'options',
+	--	def    = 1,
+	--	min    = 0,
+	--	max    = 1,
+	--	step   = 1,
+	--},
 	{
 		key    = 'night',
 		name   = 'Day-Night Cycle',
