@@ -47,6 +47,7 @@ return {
 			normaltex = "unittextures/Core_normal.dds",
 			subfolder = "coreaircraft/t2",
 			techlevel = 2,
+			fighter = 1,
 		},
 		sfxtypes = {
 			pieceexplosiongenerators = {
